[gd_scene load_steps=6 format=3 uid="uid://dtkld6sdexyiu"]

[ext_resource type="Texture2D" uid="uid://js4tpq8uy8bp" path="res://icon.svg" id="1_8ehgg"]
[ext_resource type="Script" uid="uid://b3l7ql71h3v5b" path="res://scripts/enemy_triangle.gd" id="1_xykmb"]
[ext_resource type="Script" uid="uid://cv0kocsb7np4x" path="res://scripts/hurtbox.gd" id="3_15rya"]
[ext_resource type="Script" uid="uid://dmc7bossv8q17" path="res://scripts/Health.gd" id="4_c32mt"]
[ext_resource type="Script" uid="uid://bdy16u4km4bt6" path="res://scripts/hitbox.gd" id="5_c32mt"]

[node name="enemy_triangle" type="CharacterBody2D"]
modulate = Color(1, 0.59091085, 0.70677173, 1)
collision_layer = 8
collision_mask = 2
script = ExtResource("1_xykmb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_8ehgg")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-65, 63, 0, -64, 63, 63)

[node name="collision_detection" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="collision_detection"]
polygon = PackedVector2Array(-65, 63, 0, -64, 63, 63)

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
collision_layer = 0
collision_mask = 8
script = ExtResource("3_15rya")
health = NodePath("../Health")
metadata/_custom_type_script = "uid://cv0kocsb7np4x"

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="HurtBox"]
polygon = PackedVector2Array(-65, 63, 0, -64, 63, 63)

[node name="Health" type="Node" parent="."]
script = ExtResource("4_c32mt")
health = 7
metadata/_custom_type_script = "uid://dmc7bossv8q17"

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -52.0
offset_top = -97.0
offset_right = 52.0
offset_bottom = -70.0
max_value = 7.0
step = 1.0
show_percentage = false

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
script = ExtResource("5_c32mt")
metadata/_custom_type_script = "uid://bdy16u4km4bt6"

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="HitBox"]
polygon = PackedVector2Array(-65, 63, 0, -64, 63, 63)

[connection signal="body_entered" from="collision_detection" to="." method="_on_collision_detection_body_entered"]
[connection signal="health_depleted" from="Health" to="." method="_on_health_health_depleted"]
